# bailian-cli

./: Makefile  README.md  install.sh  pyproject.toml
skills/bailian-ai/: SKILL.md
skills/bailian-ai/references/: command-map.md  error-handling.md  models.md  output-format.md  voices.md
skills/bailian-ai/scripts/: install-check.sh
src/bailian_cli/: __init__.py  __main__.py  cli.py  client.py  config.py  output.py
src/bailian_cli/commands/: chat.py  embedding.py  image.py  stt.py  tts.py  vision.py
tests/: test_cli.py  test_config.py  test_output.py  test_sdk_commands.py
